--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,19 +18,22 @@
     <EditText
         android:id="@+id/editLogin"
         android:hint="Digite o login"
+        android:textAlignment="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
     <EditText
         android:id="@+id/editSenha"
         android:hint="Digite a senha"
+        android:textAlignment="center"
+        android:inputType="textPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
     <Button
         android:id="@+id/btnEntrar"
         android:text="ENTRAR"
-        android:onClick="entrar"
+        android:onClick="entrarEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
@@ -57,9 +60,14 @@
             android:id="@+id/signInGoogle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20sp"/>
+            android:layout_marginLeft="25sp"/>
 
-
+        <com.facebook.login.widget.LoginButton
+            android:id="@+id/signInFacebook"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15sp"
+            android:layout_marginLeft="45sp"/>
 
     </LinearLayout>
 
