--- a/app/src/main/res/layout/activity_login_cadastrar.xml
+++ b/app/src/main/res/layout/activity_login_cadastrar.xml
@@ -7,6 +7,22 @@
     android:orientation="vertical"
     tools:context=".LoginCadastrar">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="PROJETO INTEGRADOR"
+        android:textAlignment="center"
+        android:layout_marginTop="20sp"
+        android:layout_marginBottom="20sp"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="CADASTRO COM EMAIL"
+        android:textAlignment="center"
+        android:layout_marginTop="10sp"
+        android:layout_marginBottom="10sp"/>
+
     <EditText
         android:id="@+id/editLogin"
         android:hint="Digite o e-mail"
@@ -15,6 +31,12 @@
     <EditText
         android:id="@+id/editSenha"
         android:hint="Digite a senha"
+        android:inputType="textPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+    <EditText
+        android:id="@+id/editConSenha"
+        android:hint="Confirme a senha"
         android:inputType="textPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
