--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -56,7 +56,7 @@
 
     <Button
         android:id="@+id/btnCadastrar"
-        android:text="CADASTRAR"
+        android:text="CADASTRAR NOVO USUARIO"
         android:onClick="cadastrar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
@@ -66,7 +66,7 @@
         android:layout_marginTop="20sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Entrar com email"
+        android:text="ENTRAR COM EMAIL"
         android:onClick="changeLayout"/>
 
     <TextView
@@ -75,8 +75,7 @@
         android:layout_height="wrap_content"
         android:text="ENTRAR COM OUTROS SERVIÇOS"
         android:layout_marginTop="20sp"
-        android:textAlignment="center"
-        android:visibility="gone"/>
+        android:textAlignment="center"/>
 
     <GridLayout
         android:layout_width="match_parent"
@@ -84,7 +83,6 @@
         android:layout_marginTop="20sp"
         android:rowCount="1"
         android:columnCount="2">
-
 
         <com.google.android.gms.common.SignInButton
             android:id="@+id/signInGoogle"
