--- a/app/src/main/res/layout/activity_pesquisa.xml
+++ b/app/src/main/res/layout/activity_pesquisa.xml
@@ -20,7 +20,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/textWelcome"/>
+        android:id="@+id/textUsuario"/>
 
     <EditText
         android:layout_width="match_parent"
@@ -56,6 +56,6 @@
         android:text="Voltar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/btnSair"
+        android:id="@+id/btnVoltar"
         android:onClick="voltar"/>
 </LinearLayout>
