--- a/app/src/main/res/layout/activity_pesquisa.xml
+++ b/app/src/main/res/layout/activity_pesquisa.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:layout_marginLeft="10sp"
     android:layout_marginRight="10sp"
+    android:scrollbars="vertical"
     android:orientation="vertical"
     tools:context=".Pesquisa">
 
@@ -17,12 +18,31 @@
         android:layout_marginTop="20sp"
         android:layout_marginBottom="20sp"/>
 
-    <TextView
+    <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/textUsuario"/>
+        android:rowCount="1"
+        android:columnCount="2">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textUsuario"
+            android:layout_gravity="left"
+            android:layout_row="0"
+            android:layout_column="0"/>
+        <Button
+            android:text="Voltar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnVoltar"
+            android:onClick="voltar"
+            android:layout_row="0"
+            android:layout_column="1"
+            android:layout_gravity="right"/>
+    </GridLayout>
 
     <EditText
+        android:layout_marginTop="20sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Digite o titulo do filme"
@@ -36,11 +56,29 @@
         android:textAlignment="center"
         android:id="@+id/editAno"/>
 
-    <Button
+    <GridLayout
+        android:layout_marginTop="10sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Buscar Informações"
-        android:onClick="buscarFilme"/>
+        android:rowCount="1"
+        android:columnCount="2">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="0"
+            android:layout_column="0"
+            android:text="Buscar Informações"
+            android:onClick="buscarFilme"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="0"
+            android:layout_column="1"
+            android:text="Adicionar a Minha lista"
+            android:layout_gravity="right"
+            android:onClick="adicionarFilme"/>
+    </GridLayout>
 
     <ImageView
         android:layout_width="wrap_content"
@@ -52,10 +90,4 @@
         android:layout_height="wrap_content"
         android:id="@+id/resultado"/>
 
-    <Button
-        android:text="Voltar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/btnVoltar"
-        android:onClick="voltar"/>
 </LinearLayout>
