--- a/app/src/main/res/layout/activity_mascara.xml
+++ b/app/src/main/res/layout/activity_mascara.xml
@@ -1,9 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context=".Mascara">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:columnCount="3"
+        android:rowCount="1">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Carregar Foto"
+            android:id="@+id/btnCarregar"
+            android:onClick="carregarFoto"
+            android:layout_row="0"
+            android:layout_column="0"/>
+
+        <Button
+            android:layout_column="1"
+            android:layout_row="0"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="Verificar Mascara"
+            android:id="@+id/btnverificarMascara"
+            android:onClick="processar"/>
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            android:layout_row="0"
+            android:layout_column="2"
+            android:layout_gravity="center"
+            android:id="@+id/loading"/>
+    </GridLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/info"
+        android:visibility="gone"
+        android:layout_gravity="center"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView"
+        android:layout_gravity="center"/>
+
+</LinearLayout>
