--- a/app/src/main/res/layout/activity_mascara.xml
+++ b/app/src/main/res/layout/activity_mascara.xml
@@ -34,7 +34,7 @@
         <ProgressBar
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="invisible"
+            android:visibility="gone"
             android:layout_row="0"
             android:layout_column="2"
             android:layout_gravity="center"
@@ -45,8 +45,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/info"
-        android:visibility="gone"
-        android:layout_gravity="center"/>
+        android:visibility="invisible"
+        android:textAlignment="center"/>
 
     <ImageView
         android:layout_width="wrap_content"
