--- a/app/src/main/res/layout/activity_mascara.xml
+++ b/app/src/main/res/layout/activity_mascara.xml
@@ -31,6 +31,14 @@
             android:id="@+id/btnverificarMascara"
             android:onClick="processar"/>
 
+        <Button
+            android:layout_column="2"
+            android:layout_row="0"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="Voltar"
+            android:onClick="voltar"/>
+
         <ProgressBar
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
