separei minha lista de filmes em outra activity

--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -25,7 +25,7 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Buscar Filme"
+        android:text="Adicionar Filme"
         android:onClick="buscarFilme"/>
 
     <Button
@@ -36,29 +36,17 @@
         android:onClick="sair"/>
 
     <Button
+        android:text="Mostrar minha lista de filmes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnMinhaLista"
+        android:onClick="minhaLista"/>
+
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Mascara"
         android:onClick="abrirMascara"
         android:id="@+id/btnMascara"/>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Trazer meus filmes"
-        android:onClick="buscarMeusFilmes"
-        android:id="@+id/btnMeusFilmes"/>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Trazer filme por titulo"
-        android:onClick="meuFilmeTitulo"
-        android:id="@+id/btnMeuFilmeTitulo"/>
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Titulo do filme"
-        android:id="@+id/trazerTitulo"/>
 </LinearLayout>
