--- a/app/src/main/res/layout/activity_meus_filmes.xml
+++ b/app/src/main/res/layout/activity_meus_filmes.xml
@@ -17,6 +17,13 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Voltar"
+        android:onClick="voltarPrincipal"
+        android:id="@+id/btnVoltar"/>
+
+    <!--<Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="Trazer filme por titulo"
         android:onClick="meuFilmeTitulo"
         android:id="@+id/btnMeuFilmeTitulo"/>
@@ -25,49 +32,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Titulo do filme"
-        android:id="@+id/trazerTitulo"/>
+        android:id="@+id/trazerTitulo"/> -->
 
-    <GridLayout
+    <ListView
+        android:id="@+id/listaFilmes"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:columnCount="3"
-        android:rowCount="3"
-        android:visibility="gone"
-        android:scrollbars="vertical"
-        >
-
-        <ImageView
-            android:id="@+id/poster"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_row="0"
-            android:layout_column="0"
-            android:layout_rowSpan="3"
-            />
-
-        <TextView
-            android:id="@+id/textTitulo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_column="1"
-            android:layout_row="0"
-            android:text="titulo do filme"/>
-
-        <TextView
-            android:id="@+id/textClasssificacao"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_column="2"
-            android:layout_row="0"
-            android:layout_gravity="right"
-            android:text="classificação"/>
-
-        <Button
-            android:id="@+id/btnDeletar"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:text="deletar"/>
-
-    </GridLayout>
+        android:layout_height="wrap_content">
+    </ListView>
 
 </LinearLayout>
