--- a/app/src/main/res/layout/filme_layout.xml
+++ b/app/src/main/res/layout/filme_layout.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:columnCount="3"
-        android:rowCount="6"
+        android:rowCount="8"
         >
 
         <ImageView
@@ -18,8 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_row="0"
             android:layout_column="0"
-            android:layout_rowSpan="6"
-            app:srcCompat="@drawable/common_google_signin_btn_icon_dark" />
+            android:layout_rowSpan="8"/>
 
         <TextView
             android:id="@+id/textTitulo"
@@ -27,6 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_row="0"
             android:layout_column="1"
+            android:layout_rowSpan="2"
             android:text="Titulo:"/>
 
         <TextView
@@ -34,8 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="1"
-            android:layout_row="1"
-            android:layout_rowSpan="2"
+            android:layout_row="2"
             android:text="Classificação:"/>
 
 
@@ -43,8 +42,9 @@
             android:id="@+id/textData"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_column="2"
-            android:layout_row="1"
+            android:layout_column="1"
+            android:layout_row="3"
+            android:layout_columnSpan="2"
             android:text="Data:"/>
 
         <TextView
@@ -52,7 +52,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="1"
-            android:layout_row="2"
+            android:layout_row="4"
             android:text="Genero:"/>
 
         <TextView
@@ -60,7 +60,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="1"
-            android:layout_row="3"
+            android:layout_row="5"
             android:text="Diretor:"/>
 
         <TextView
@@ -68,8 +68,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="1"
-            android:layout_row="4"
-            android:layout_rowSpan="2"
+            android:layout_row="6"
             android:text="País:"/>
 
         <TextView
@@ -77,7 +76,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="2"
-            android:layout_row="4"
+            android:layout_row="6"
             android:text="Nota IMDB:"/>
 
         <TextView
@@ -86,7 +85,7 @@
             android:layout_height="wrap_content"
             android:layout_column="1"
             android:layout_columnSpan="2"
-            android:layout_row="5"
+            android:layout_row="7"
             android:text="Enredo:"/>
 
         <Button
