--- a/app/src/main/res/layout/activity_mascara.xml
+++ b/app/src/main/res/layout/activity_mascara.xml
@@ -8,6 +8,34 @@
     tools:context=".Mascara">
 
     <GridLayout
+        android:layout_marginTop="15sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:rowCount="1"
+        android:columnCount="2">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textUser"
+            android:layout_column="0"
+            android:layout_row="0"
+            android:layout_marginLeft="10sp"/>
+
+        <Button
+            android:text="SAIR"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnSair"
+            android:onClick="sair"
+            android:layout_row="0"
+            android:layout_column="1"
+            android:layout_gravity="right"
+            android:layout_marginRight="10sp"/>
+
+    </GridLayout>
+
+    <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:columnCount="3"
@@ -20,7 +48,8 @@
             android:id="@+id/btnCarregar"
             android:onClick="carregarFoto"
             android:layout_row="0"
-            android:layout_column="0"/>
+            android:layout_column="0"
+            android:layout_marginLeft="10sp"/>
 
         <Button
             android:layout_column="1"
@@ -29,7 +58,8 @@
             android:layout_width="wrap_content"
             android:text="Verificar Mascara"
             android:id="@+id/btnverificarMascara"
-            android:onClick="processar"/>
+            android:onClick="processar"
+            android:layout_marginLeft="10sp"/>
 
         <Button
             android:layout_column="2"
@@ -37,7 +67,9 @@
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:text="Voltar"
-            android:onClick="voltar"/>
+            android:onClick="voltar"
+            android:layout_gravity="right"
+            android:layout_marginRight="10sp"/>
 
         <ProgressBar
             android:layout_width="wrap_content"
