--- a/app/src/main/res/layout/activity_meus_filmes.xml
+++ b/app/src/main/res/layout/activity_meus_filmes.xml
@@ -7,38 +7,60 @@
     android:orientation="vertical"
     tools:context=".MeusFilmes">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Trazer meus filmes"
-        android:onClick="buscarMeusFilmes"
-        android:id="@+id/btnMeusFilmes"/>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Voltar"
-        android:onClick="voltarPrincipal"
-        android:id="@+id/btnVoltar"/>
-
-    <!--<Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Trazer filme por titulo"
-        android:onClick="meuFilmeTitulo"
-        android:id="@+id/btnMeuFilmeTitulo"/>
-
-    <EditText
+    <GridLayout
+        android:layout_marginTop="15sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Titulo do filme"
-        android:id="@+id/trazerTitulo"/> -->
+        android:rowCount="2"
+        android:columnCount="2">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textUser"
+            android:layout_column="0"
+            android:layout_row="0"
+            android:layout_marginLeft="10sp"/>
+
+        <Button
+            android:text="SAIR"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnSair"
+            android:onClick="sair"
+            android:layout_row="0"
+            android:layout_column="1"
+            android:layout_gravity="right"
+            android:layout_marginRight="10sp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="0"
+            android:layout_row="1"
+            android:text="Nenhum filme cadastado na minha lista!"
+            android:id="@+id/textAchou"
+            android:visibility="invisible"
+            android:layout_marginLeft="10sp"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Voltar"
+            android:layout_column="1"
+            android:layout_row="1"
+            android:onClick="voltarPrincipal"
+            android:id="@+id/btnVoltar"
+            android:layout_gravity="right"
+            android:layout_marginRight="10sp"/>
+
+    </GridLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listaFilmes"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:listitem="@layout/filme_layout">
+        tools:listitem="@layout/filme_layout"
+        android:layout_marginTop="15sp">
     </androidx.recyclerview.widget.RecyclerView>
 
 </LinearLayout>
