--- a/app/src/main/res/layout/activity_pesquisa.xml
+++ b/app/src/main/res/layout/activity_pesquisa.xml
@@ -21,8 +21,9 @@
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:rowCount="1"
+        android:rowCount="2"
         android:columnCount="2">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -30,19 +31,29 @@
             android:layout_gravity="left"
             android:layout_row="0"
             android:layout_column="0"/>
+
+        <Button
+            android:text="SAIR"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnSair"
+            android:onClick="sair"
+            android:layout_row="0"
+            android:layout_column="1"
+            android:layout_gravity="right"/>
+
         <Button
             android:text="Voltar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/btnVoltar"
             android:onClick="voltar"
-            android:layout_row="0"
+            android:layout_row="1"
             android:layout_column="1"
             android:layout_gravity="right"/>
     </GridLayout>
 
     <EditText
-        android:layout_marginTop="20sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Digite o titulo do filme"
@@ -80,14 +91,89 @@
             android:onClick="adicionarFilme"/>
     </GridLayout>
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/poster"
-        android:layout_gravity="center"/>
-    <TextView
+    <GridLayout
+        android:id="@+id/Grid"
+        android:layout_marginTop="10sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/resultado"/>
+        android:columnCount="2"
+        android:rowCount="8"
+        android:visibility="gone">
+
+        <ImageView
+            android:id="@+id/poster"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="0"
+            android:layout_column="0"
+            android:layout_rowSpan="8"
+            android:layout_marginRight="5sp"/>
+
+        <TextView
+            android:id="@+id/textTitulo"
+            android:layout_width="270sp"
+            android:layout_height="wrap_content"
+            android:layout_row="0"
+            android:layout_column="1"
+            android:text="Titulo:"/>
+
+        <TextView
+            android:id="@+id/textClasssificacao"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="1"
+            android:layout_row="1"
+            android:text="Classificação:"/>
+
+
+        <TextView
+            android:id="@+id/textData"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="1"
+            android:layout_row="2"
+            android:text="Data:"/>
+
+        <TextView
+            android:id="@+id/textGenero"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="1"
+            android:layout_row="3"
+            android:text="Genero:"/>
+
+        <TextView
+            android:id="@+id/textDiretor"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="1"
+            android:layout_row="4"
+            android:text="Diretor:"/>
+
+        <TextView
+            android:id="@+id/textPais"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="1"
+            android:layout_row="5"
+            android:text="País:"/>
+
+        <TextView
+            android:id="@+id/textNotaIMDB"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="1"
+            android:layout_row="6"
+            android:text="Nota IMDB:"/>
+
+        <TextView
+            android:id="@+id/textEnredo"
+            android:layout_width="270sp"
+            android:layout_height="wrap_content"
+            android:layout_column="1"
+            android:layout_row="7"
+            android:text="Enredo:"/>
+
+    </GridLayout>
 
 </LinearLayout>
