--- a/app/src/main/res/layout/filme_layout.xml
+++ b/app/src/main/res/layout/filme_layout.xml
@@ -2,15 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <GridLayout
         android:id="@+id/Grid"
+        android:layout_marginTop="10sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:columnCount="3"
+        android:columnCount="2"
         android:rowCount="8"
-        >
+        android:visibility="visible">
 
         <ImageView
             android:id="@+id/poster"
@@ -18,23 +20,23 @@
             android:layout_height="wrap_content"
             android:layout_row="0"
             android:layout_column="0"
-            android:layout_rowSpan="8"/>
+            android:layout_rowSpan="8"
+            android:layout_marginRight="5sp"/>
 
         <TextView
             android:id="@+id/textTitulo"
-            android:layout_width="wrap_content"
+            android:layout_width="270sp"
             android:layout_height="wrap_content"
             android:layout_row="0"
             android:layout_column="1"
-            android:layout_rowSpan="2"
-            android:text="Titulo:"/>
+            android:text="Titulo:" />
 
         <TextView
             android:id="@+id/textClasssificacao"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="1"
-            android:layout_row="2"
+            android:layout_row="1"
             android:text="Classificação:"/>
 
 
@@ -43,8 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="1"
-            android:layout_row="3"
-            android:layout_columnSpan="2"
+            android:layout_row="2"
             android:text="Data:"/>
 
         <TextView
@@ -52,7 +53,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="1"
-            android:layout_row="4"
+            android:layout_row="3"
             android:text="Genero:"/>
 
         <TextView
@@ -60,7 +61,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="1"
-            android:layout_row="5"
+            android:layout_row="4"
             android:text="Diretor:"/>
 
         <TextView
@@ -68,33 +69,32 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="1"
-            android:layout_row="6"
+            android:layout_row="5"
             android:text="País:"/>
 
         <TextView
             android:id="@+id/textNotaIMDB"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_column="2"
+            android:layout_column="1"
             android:layout_row="6"
             android:text="Nota IMDB:"/>
 
         <TextView
             android:id="@+id/textEnredo"
-            android:layout_width="300sp"
+            android:layout_width="270sp"
             android:layout_height="wrap_content"
             android:layout_column="1"
-            android:layout_columnSpan="2"
             android:layout_row="7"
             android:text="Enredo:"/>
 
-        <Button
-            android:id="@+id/btnDeletar"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:layout_column="1"
-            android:text="deletar"/>
-
     </GridLayout>
+
+    <Button
+        android:id="@+id/btnDeletar"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:text="deletar"
+        android:layout_gravity="left"/>
 
 </LinearLayout>
