--- a/app/src/main/res/layout/activity_meus_filmes.xml
+++ b/app/src/main/res/layout/activity_meus_filmes.xml
@@ -7,6 +7,14 @@
     android:orientation="vertical"
     tools:context=".MeusFilmes">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TOP List"
+        android:textAlignment="center"
+        android:layout_marginTop="20sp"
+        android:layout_marginBottom="20sp"/>
+
     <GridLayout
         android:layout_marginTop="15sp"
         android:layout_width="match_parent"
