--- a/app/src/main/res/layout/activity_recuperar_senha.xml
+++ b/app/src/main/res/layout/activity_recuperar_senha.xml
@@ -10,7 +10,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="PROJETO INTEGRADOR"
+        android:text="TOP List"
         android:textAlignment="center"
         android:layout_marginTop="20sp"
         android:layout_marginBottom="20sp"/>
