--- a/app/src/main/res/layout/activity_mascara.xml
+++ b/app/src/main/res/layout/activity_mascara.xml
@@ -7,6 +7,14 @@
     android:layout_height="match_parent"
     tools:context=".Mascara">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TOP List"
+        android:textAlignment="center"
+        android:layout_marginTop="20sp"
+        android:layout_marginBottom="20sp"/>
+
     <GridLayout
         android:layout_marginTop="15sp"
         android:layout_width="match_parent"
@@ -58,8 +66,7 @@
             android:layout_width="wrap_content"
             android:text="Verificar Mascara"
             android:id="@+id/btnverificarMascara"
-            android:onClick="processar"
-            android:layout_marginLeft="10sp"/>
+            android:onClick="processar"/>
 
         <Button
             android:layout_column="2"
@@ -71,26 +78,25 @@
             android:layout_gravity="right"
             android:layout_marginRight="10sp"/>
 
-        <ProgressBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:layout_row="0"
-            android:layout_column="2"
-            android:layout_gravity="center"
-            android:id="@+id/loading"/>
     </GridLayout>
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:layout_gravity="center"
+        android:id="@+id/loading"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/info"
-        android:visibility="invisible"
+        android:visibility="gone"
         android:textAlignment="center"/>
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:id="@+id/imageView"
         android:layout_gravity="center"/>
 
